--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </button>
         </div>
         <!-- links -->
-        <ul>
+        <ul class="nav-links">
           <li>
             <a href="index.html">home</a>
           </li>
