--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             <a href="contact.html">contact</a>
           </li>
         </ul>
-        <ul>
+        <!-- social icons -->
+        <ul class="social-icons">
           <li>
             <a href="https://www.twitter.com" class="social-icon">
               <i class="fab fa-facebook"> facebook</i>
