fixed header done

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- end of sidebar -->
     <!-- header -->
-
+    <div class="hero"></div>
     <!-- end of header -->
     <!-- about -->
 
