--- a/index.html
+++ b/index.html
@@ -94,7 +94,45 @@
 
     <!-- end of sidebar -->
     <!-- header -->
-    <div class="hero"></div>
+    <header class="hero">
+      <div class="section-center hero-center">
+        <article class="hero-info">
+          <div class="underline"></div>
+          <h1>i'm john</h1>
+          <h4>freelance web & mobile UI/UX Designer</h4>
+          <a href="contact.html" class="btn hero-btn">hire me</a>
+          <ul class="social-icons hero-icon">
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-squarespace"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-behance"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" class="social-icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+        </article>
+        <article class="hero-img">
+          <img src="./images/hero-img.jpeg" alt="john doe" class="hero-photo" />
+        </article>
+      </div>
+    </header>
     <!-- end of header -->
     <!-- about -->
 
