--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
         <!-- social icons -->
         <ul class="social-icons">
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-facebook"> facebook</i>
+            <a href="https://www.twitter.com" class="social-icon largeur">
+              <i class="fab fa-facebook"></i>
             </a>
           </li>
           <li>
             <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-linkedin"> linkedin</i>
+              <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <li>
             <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-squarespace"> squarespace</i>
+              <i class="fab fa-squarespace"></i>
             </a>
           </li>
           <li>
             <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-behance"> behance</i>
+              <i class="fab fa-behance"></i>
             </a>
           </li>
           <li>
             <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-instagram"> instagram</i>
+              <i class="fab fa-instagram"></i>
             </a>
           </li>
         </ul>
@@ -101,7 +101,7 @@
           <h1>i'm john</h1>
           <h4>freelance web & mobile UI/UX Designer</h4>
           <a href="contact.html" class="btn hero-btn">hire me</a>
-          <ul class="social-icons hero-icon">
+          <ul class="social-icons hero-icons">
             <a href="https://www.twitter.com" class="social-icon">
               <i class="fab fa-facebook"></i>
             </a>
