hero CSS for large screen done

--- a/index.html
+++ b/index.html
@@ -134,7 +134,33 @@
       </div>
     </header>
     <!-- end of header -->
-    <!-- about -->
+  <!-- about -->
+  <section class="section about">
+    <div class="section-center about-center">
+      <!-- about image -->
+      <article class="about-img">
+        <img src="./images/about-img.jpeg" 
+        class="her-photo" 
+        alt="about-img">
+      </article>
+
+    </div>
+  
+  
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- end of about -->
     <!-- services -->
