About HTML done

--- a/index.html
+++ b/index.html
@@ -143,6 +143,30 @@
         class="her-photo" 
         alt="about-img">
       </article>
+      <article class="about-info">
+      <!-- section title  -->
+        <div class="section-title about-title">
+          <h2>about</h2>
+          <div class="underline"></div>          
+        </div>
+      <!-- end section title  -->
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Recusandae quibusdam, minima aut corporis, ad voluptatum 
+        voluptas voluptates dolores similique itaque labore vel ullam
+        quas ipsa sapiente inventore, modi voluptatibus. Modi ad 
+        tenetur deleniti quis quas cupiditate suscipit, porro natus 
+        facere repellat! Fugit, deserunt eum minima dolore nobis ullam 
+        quasi! Optio!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Dolores omnis quod dolor quam sed quo excepturi consequuntur 
+        sapiente ad maiores commodi a eaque, non aperiam esse. Accusamus 
+        dolorum voluptates laboriosam, fugit ratione accusantium quibusdam
+        explicabo voluptatem eaque adipisci itaque tempora deleniti magni 
+        ut perspiciatis, nam ipsa rem, error debitis tenetur.
+      </p>
+      <a href="about.html" class="btn">ABOUT ME</a> 
+      </article>
 
     </div>
   
