About CSS small screen done

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <!-- about image -->
       <article class="about-img">
         <img src="./images/about-img.jpeg" 
-        class="her-photo" 
+        class="hero-photo" 
         alt="about-img">
       </article>
       <article class="about-info">
