Services HTML done

--- a/index.html
+++ b/index.html
@@ -138,17 +138,14 @@
   <section class="section about">
     <div class="section-center about-center">
       <!-- about image -->
-      <article class="about-img">
-        <img src="./images/about-img.jpeg" 
-        class="hero-photo" 
+      <article class="about-img"><img src="./images/about-img.jpeg" class="hero-photo" 
         alt="about-img">
       </article>
       <article class="about-info">
       <!-- section title  -->
-        <div class="section-title about-title">
+    <div class="section-title about-title">
           <h2>about</h2>
-          <div class="underline"></div>          
-        </div>
+        <div class="underline"></div>          
       <!-- end section title  -->
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
         Recusandae quibusdam, minima aut corporis, ad voluptatum 
@@ -166,29 +163,61 @@
         ut perspiciatis, nam ipsa rem, error debitis tenetur.
       </p>
       <a href="about.html" class="btn">ABOUT ME</a> 
-      </article>
-
+    </article>
     </div>
-  
-  
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
     <!-- end of about -->
+    
     <!-- services -->
+    <!-- section title  -->
+    <section class="section bg-grey">
+      <div class="section-title">
+        <h2>services</h2>
+        <div class="underline"></div>
+      </div>
+    </section>
+    <!-- end section title  -->
+    <div class="services-center section-center">
+      <!-- single service 1 -->
+       <div class="service">
+        <i class="fas fa-code service-icon"></i>
+        <h4>web development</h4>
+        <div class="underline"></div>
+        <p>Lorem ipsum dolor, sit amet consectetur 
+          adipisicing elit. Iure amet corporis 
+          quae magnam adipisci accusantium repellat nam, 
+          nulla praesentium quisquam!
+        </p> 
+      </div>
+      <!-- end single service 1 -->
+      <!-- single service 2 -->
+       <div class="service">
+        <i class="fab fa-sketch service-icon"></i>
+        <h4>web design</h4>
+        <div class="underline"></div>
+        <p>Lorem ipsum dolor, sit amet consectetur 
+          adipisicing elit. Iure amet corporis 
+          quae magnam adipisci accusantium repellat nam, 
+          nulla praesentium quisquam!
+        </p> 
+      </div>
+      <!-- end single service 2 -->
+      <!-- single service 3 -->
+       <div class="service">
+        <i class="fab fa-android service-icon"></i>
+        <h4>app design</h4>
+        <div class="underline"></div>
+        <p>Lorem ipsum dolor, sit amet consectetur 
+          adipisicing elit. Iure amet corporis 
+          quae magnam adipisci accusantium repellat nam, 
+          nulla praesentium quisquam!
+        </p> 
+      </div>
+      <!-- end single service 3 -->
+    </div>
 
+    
     <!-- end of services -->
     <!-- projects -->
 
