HTML projects done

--- a/index.html
+++ b/index.html
@@ -213,13 +213,90 @@
           quae magnam adipisci accusantium repellat nam, 
           nulla praesentium quisquam!
         </p> 
-      </div>
+          </div>
       <!-- end single service 3 -->
     </div>
-
-    
     <!-- end of services -->
+
     <!-- projects -->
+    <section class="section projects">
+      <!-- section title -->
+        <div class="section-title">
+          <h2>projects</h2>
+          <div class="underline"></div>
+          <p class="projects-text">
+            EN TETE DES PROJETS
+            amet consectetur, adipisicing
+            elit. Voluptatibus iusto ut neque 
+            cupiditate optio velit deleniti 
+            voluptate, incidunt itaque repudiandae 
+            perspiciatis eveniet doloribus quidem
+            asperiores reiciendis voluptas! Laboriosam 
+            repudiandae reiciendis itaque totam aut 
+            modi magnam, quasi quisquam magni ducimus
+            nisi?
+          </p>
+        </div>    
+        <!-- end section title -->
+         <div class="section-center projects-center">
+            <!-- single project 1-->
+            <a href="projects.html" class="project-1"></a>
+              <article class="project">
+                <img src="./images/project-1.jpeg" 
+                alt="projet 1" class="project-img">
+                <div class="project-info">
+                  <h4>project NO 1 title</h4>
+                  <p>client name</p>
+                </div>
+              </article>
+            </a>
+            <!-- end single project 1 -->
+            <!-- single project 2-->
+            <a href="projects.html" class="project-2"></a>
+              <article class="project">
+                <img src="./images/project-2.jpeg" 
+                alt="projet 2" class="project-img">
+                <div class="project-info">
+                  <h4>project NO 2 title</h4>
+                  <p>client name</p>
+                </div>
+              </article>
+            </a>
+            <!-- end single project 2 -->
+            <!-- single project 3 -->
+            <a href="projects.html" class="project-3"></a>
+              <article class="project">
+                <img src="./images/project-3.jpeg" 
+                alt="projet 3" class="project-img">
+                <div class="project-info">
+                  <h4>project NO 3 title</h4>
+                  <p>client name</p>
+                </div>
+              </article>
+            </a>
+            <!-- single project 4-->
+            <a href="projects.html" class="project-4"></a>
+              <article class="project">
+                <img src="./images/project-4.jpeg"
+                alt="projet 4" class="project-img">
+                <div class="project-info">
+                  <h4>project NO 4 title</h4>
+                  <p>client name</p>
+                </div>
+              </article>
+            </a>
+            <!-- end single project 4 -->
+        
+         </div>
+    </section> 
+
+
+
+
+
+
+
+
 
     <!-- end of projects -->
     <!-- connect -->
