Connect HTML & CSS done

--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
     </div>
     <!-- end of services -->
 
-    <!-- projects -->
+    <!-- projects --> 
     <section class="section projects">
       <!-- section title -->
         <div class="section-title">
-          <h2>projects</h2>
+          <h2>latest works</h2>
           <div class="underline"></div>
           <p class="projects-text">
             EN TETE DES PROJETS
@@ -289,18 +289,18 @@
         
          </div>
     </section> 
-
-
-
-
-
-
-
-
-
-    <!-- end of projects -->
+    <!-- end of projects --> 
+    
     <!-- connect -->
-
+    <section class="connect">
+      <video controls autoplay muted loop 
+      class="video-container" 
+      poster="./images/project-1.jpeg">
+      <source src="./videos/connect.mp4" 
+      type="video/mp4"/>
+        Sorry, your browser does not support embedded videos
+      </video>
+    </section>
     <!-- end of connect -->
     <!-- skills -->
 
